testsuites/LLT/compiler/Diagnose/lex_test/lex_unexpected_digit/case11.cj
// Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
// This source file is part of the Cangjie project, licensed under Apache-2.0
// with Runtime Library Exception.
//
// See https://cangjie-lang.cn/pages/LICENSE for license information.

// LEVEL: 0
// DEPENDENCE: %n.expect.out
// EXEC-1: %compiler %noColor %n.cj > %n.%realOut 2>&1
// EXEC: %diff %n.expect.out %n.%realOut

main()
{
	var a = 0o12379
	var b = 0o12379.129
	var c = 0b23
	var d = 12a6
	var e = 12f7
	var f = 0d12a
	var g = 12 a
}
